tests/snapshots/tui/training_clear_failed_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs                                       rust_expert "
"╭ runs ────────────────────────────────────────────────────────────────────╮╭ system ──────────────────────────────────╮"
"│ run                   state      target     pod                          ││ no sample: not followed                  │"
"│ 20260921-133200-a1b2  running    gpu_cloud  ready k3x9abc $0… followed   ││                                          │"
"│ 20260920-101500-9f00  succeeded  homelab                                 ││                                          │"
"│ 20260919-090000-c3d4  running    homelab                                 ││                                          │"
"│ 20260918-080000-dead  failed     gpu_cloud  ready k3x9abc $0…            ││                                          │"
"╰──────────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────╯"
"  20260918-080000-dead                                                                                                  "
"                                                                                                                        "
"  pod k3x9abc ready $0.53/h  up 41m (about $0.36)  the watchdog deletes it by 2026-09-21T19:32:20Z                      "
"                                                                                                                        "
"  not followed: press a to attach                                                                                       "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                        ╭ Clear failed runs? ──────────────────────────────────────────────────╮                        "
"                        │                                                                      │                        "
"                        │  Hide the failed run from this list until the TUI restarts? Nothing  │                        "
"                        │  is deleted: the files stay in runs/, and `overbrainer runs ls`      │                        "
"                        │  still lists every run.                                              │                        "
"                        │                                                                      │                        "
"                        │                                               y clear    n keep it   │                        "
"                        │                                                                      │                        "
"                        ╰──────────────────────────────────────────────────────────────────────╯                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" y clear · n, Esc or Enter keep it                                                           … 1 training task · ? help "
