tests/snapshots/tui/training_clear_failed_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ 1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare  rust_expert "
"╭ runs ────────────────────────────────────────────────────────────────────────╮"
"│ run                   state      target     pod                              │"
"│ 20260921-133200-a1b2  running    gpu_cloud  ready k3x9abc $0.53/h followed   │"
"│ 20260920-101500-9f00  succeeded  homelab                                     │"
"│ 20260919-090000-c3d4  running    homelab                                     │"
"│ 20260918-080000-dead  failed     gpu_cloud  ready k3x9abc $0.53/h            │"
"╰──                                                                          ──╯"
"  2 ╭ Clear failed runs? ──────────────────────────────────────────────────╮    "
"  p │                                                                      │    "
"  2 │  Hide the failed run from this list until the TUI restarts? Nothing  │    "
"  n │  is deleted: the files stay in runs/, and `overbrainer runs ls`      │    "
"    │  still lists every run.                                              │    "
"    │                                                                      │    "
"    │                                               y clear    n keep it   │    "
"    │                                                                      │    "
"    ╰──────────────────────────────────────────────────────────────────────╯    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" y clear · n, Esc or Enter keep it                   … 1 training task · ? help "
