tests/snapshots/tui/training_deleted_pod_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare                            rust_expert "
"╭ runs ────────────────────────────────────────────────────────────────────╮╭ system ──────────────────────────────────╮"
"│ run                   state      target     pod                          ││ no sample: not followed                  │"
"│ 20260921-133200-a1b2  succeeded  gpu_cloud  deleted about $0…            ││                                          │"
"│ 20260920-101500-9f00  succeeded  homelab                                 ││                                          │"
"│ 20260919-090000-c3d4  running    homelab                                 ││                                          │"
"╰──────────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────╯"
"  20260921-133200-a1b2                                                                                                  "
"                                                                                                                        "
"  pod k3x9abc deleted at 2026-09-21T14:08:20Z  up 36m  spent about $0.32                                                "
"                                                                                                                        "
"  not followed: press a to attach                                                                                       "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" j/k select · a attach · c cancel · t start · h push · x clear · p pod                            $0.32  v#.#.#  ? help "
