tests/snapshots/tui/training_empty_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Dataset  2 Pipeline  3 Training  4 Logs                                                  rust_expert "
"╭ runs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ No runs yet: press t to start one on gpu_cloud.                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" j/k select · a attach · c cancel · t start                                                              v#.#.#  ? help "
