tests/snapshots/tui/training_empty_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  rust_ex… "
"╭ runs ────────────────────────────────────────────────────────────────────────╮"
"│ No runs yet: press t to start one on gpu_cloud.                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" j/k select · a attach · c cancel · t start · h push · x clear   v#.#.#  ? help "
