tests/snapshots/tui/training_evaluating_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs                                       rust_expert "
"╭ runs ────────────────────────────────────────────────────────────────────╮╭ system ──────────────────────────────────╮"
"│ run                   state      target     pod                          ││ waiting for the first sample             │"
"│ 20260921-133200-a1b2  running    gpu_cloud  ready k3x9abc $0… followed   ││                                          │"
"│ 20260920-101500-9f00  succeeded  homelab                                 ││                                          │"
"│ 20260919-090000-c3d4  running    homelab                                 ││                                          │"
"╰──────────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────╯"
"  ● 20260921-133200-a1b2  step 1200/4000 ████▊            30%  … evaluating 340/1200                                    "
"  epoch 0.90                                                                                                            "
"                                                                                                                        "
"  pod k3x9abc ready $0.53/h  up 41m (about $0.36)  the watchdog deletes it by 2026-09-21T19:32:20Z                      "
"                                                                                                                        "
"  loss                                                                                                 ─ train  • eval  "
"  1.88 │                                                                                                                "
"       │▀▄                                                                                                              "
"       │ █▄                                                                                                             "
"       │  █                                                                                                             "
"       │   █▄                                                                                                           "
"       │    █                                                                                                           "
"       │     •                                                                                                          "
"       │      █                                                                                                         "
"       │       █                                                                                                        "
"       │        █                                                                                                       "
"       │         █▄•                                                                                                    "
"       │          ▀▄                                                                                                    "
"       │           ▀▄                                                                                                   "
"       │            ▀█                                                                                                  "
"       │              █▄•                                                                                               "
"       │               ▀█▄                                                                                              "
"       │                 ▀▄   •                                                                                         "
"       │                   ▀▄                                                                                           "
"       │                     ▀█▄   •     •                                                                              "
"       │                       ▀▀▄▄                                                                                     "
"       │                          ▀▀▀█▄▄▄                                                                               "
"  0.80 │                                                                                                                "
"       └──────────────────────────────────────────────────────────────────────────────────────────────────────────────  "
"  step 0                                                                                                          4000  "
"  lr             ▁▁▁▁▂▂▂▂▂▃▃▃▃▄▄▄▄▅▅▅▅▅▆▆▆▆▇▇▇▇█████████████████████████████████████████████████████████████ 2.00e-4    "
"  grad_norm  ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█  0.700      "
" j/k select · a attach · c cancel · t start · h push · x clear · p pod        … 1 training task · $0.36  v#.#.#  ? help "
